# generic-aeson

./: .travis.yml  CHANGELOG.md  README.md  generic-aeson.cabal
examples/: Example.hs
src/Generics/: Aeson.hs
src/Generics/Aeson/: IsEnum.hs  Util.hs
src/Generics/Generic/: Aeson.hs  IsEnum.hs
src/Generics/Generic/Aeson/: Util.hs
tests/: Main.hs
