name:                generic-aeson
version:             0.1.0.1
synopsis:            Derivation of Aeson instances using GHC generics.
description:         Derivation of Aeson instances using GHC generics.
author:              Silk
maintainer:          code@silk.co
license:             BSD3
license-file:        LICENSE
category:            Data
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:    src
  ghc-options:       -Wall
  exposed-modules:
    Generics.Generic.IsEnum
    Generics.Generic.Aeson
  build-depends:
      base >= 4 && < 4.8
    , aeson >= 0.6 && < 0.8
    , generic-deriving == 1.6.*
    , mtl >= 2.0 && < 2.2
    , tagged >= 0.2 && < 0.8
    , text >= 0.11 && < 1.2
    , vector == 0.10.*
    , attoparsec == 0.11.*

test-suite generic-aeson-tests
  ghc-options:       -Wall
  hs-source-dirs:    tests
  main-is:           Main.hs
  type:              exitcode-stdio-1.0
  build-depends:
      base
    , aeson
    , attoparsec
    , generic-aeson
    , bytestring >= 0.10 && < 0.12
    , HUnit >= 1.2 && < 1.3

source-repository head
  type:              Git
  location:          https://github.com/silkapp/generic-aeson.git
